Fix: minor adjustments in alignment and animations

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --darkBlue: #13335f;
+  --darkerBlue: #061c39;
 }
 
 *,
@@ -34,6 +35,7 @@ h6 {
 h1 {
   font-size: 3.8rem;
   line-height: 4.25rem;
+  margin-bottom: 32px;
 }
 
 ul {
@@ -57,15 +59,12 @@ p {
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .left-right {
+    animation: left-right 15s ease-in-out 0.1s infinite alternate;
   }
-}
-.left-right {
-  animation: left-right 5s ease-in-out 0.1s infinite alternate;
-}
-.up-down {
-  animation: up-down 5s ease-in-out infinite alternate;
+  .up-down {
+    animation: up-down 15s ease-in-out infinite alternate;
+  }
 }
 
 @keyframes App-logo-spin {
